--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -1,7 +1,7 @@
 name: 获取star的项目
 on:
-  schedule:
-    - cron: '0 0 * * *'  # 每天UTC 0点运行
+  #schedule:
+  #  - cron: '0 0 * * *'  # 每天UTC 0点运行
   workflow_dispatch:
 
 jobs:
